docs: add documentation for Create and Delete Opening
